--- a/Budapest/Budapest.API.csproj
+++ b/Budapest/Budapest.API.csproj
@@ -16,11 +16,22 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="appSettings.Production.json" />
+    <Content Remove="nlog.config" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="appSettings.Production.json" />
+    <None Include="nlog.config" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
+    <PackageReference Include="NLog.Extensions.Logging" Version="1.1.0" />
   </ItemGroup>
 
 </Project>
