--- a/Budapest/Budapest.API.csproj
+++ b/Budapest/Budapest.API.csproj
@@ -31,6 +31,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.1" />
     <PackageReference Include="NLog.Extensions.Logging" Version="1.1.0" />
   </ItemGroup>
 
